--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/education">Add Resume</a></li>
                 <li><a href="/searchusers">Search Users</a></li>
-
+                <li><a href="/generateresume">Generate Resume</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
