--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<html lang="en"  xmlns:th="www.thymeleaf.org">
+<head th:replace="index::head">
+
 </head>
 <body>
-$END$
+<nav th:replace="index::navseeker"></nav>
+<div class = "container">
+    <form th:action = "@{/skills}" th:object = "${skills}" method = "post">
+        <div class="form-group">
+            <label for="exampleInputname1">Skill</label>
+            <input type="text" class="form-control" id="exampleInputname1" placeholder="Skill" th:field="*{skill}"/>
+        </div>
+        <form method="post" action="/skills">
+            <input type="submit" value = "Add More" />
+        </form>
+        <form method="get" action="/">
+            <input type="submit" value = "Home" />
+        </form>
+
+    </form>
+</div>
 </body>
 </html>
