--- a/src/main/resources/templates/education.html
+++ b/src/main/resources/templates/education.html
@@ -19,15 +19,15 @@
         <label for="exampleInputurl3">School</label>
         <input type="text" class="form-control" id="exampleInputurl3" placeholder="School" th:field="*{school}"/>
     </div>
-    <form method="post" action="/education">
+    <div method="post" action="/education">
         <input type="submit" value = "Add More" />
-    </form>
-    <form method="post" action="/work">
+    </div>
+    <div method="post" action="/work">
         <input type="submit" value = "Continue" />
-    </form>
-    <form method="post" action="/skills">
+    </div>
+    <div method="post" action="/skills">
         <input type="submit" value = "Go to skill entry" />
-    </form>
+    </div>
 
 </form>
 </div>
