--- a/src/main/resources/templates/work.html
+++ b/src/main/resources/templates/work.html
@@ -27,14 +27,13 @@
             <label for="exampleInputurl5">Duties</label>
             <input type="text" class="form-control" id="exampleInputurl5" placeholder="Duties" th:field="*{duties}"/>
         </div>
-        <form method="post" action="/work">
+        <div method="post" action="/work">
             <input type="submit" value = "Add More" />
-        </form>
+        </div>
         <!--<form method=""-->
-        <form method="post" action="/skills">
-            <input type="submit" value = "Continue" />
-        </form>
-
+    </form>
+    <form action="/skills">
+        <input type="submit" value = "Continue" />
     </form>
 </div>
 </body>
