--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                         <li><a href="/education" >Add Resume</a></li>
-                        <li><a href="/searchusers">Search Users</a></li>
+                        <li><a href="/seekersearch">Search Users</a></li>
                         <li><a href="/generateresume">Generate Resume</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
