--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,8 @@
                         <li><a href="/education" >Add Resume</a></li>
                         <li><a href="/seekersearch">Search Users</a></li>
                         <li><a href="/generateresume">Generate Resume</a></li>
+                        <li><a href="/recreuitUserSearch">Search for Users for Recruiters</a></li>
+                        <li><a href="/recruitSchoolSearch">Search for Users by schools for Recruiters</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
