all four recruiter searches and user roles work

--- a/src/main/resources/templates/education.html
+++ b/src/main/resources/templates/education.html
@@ -20,7 +20,7 @@
         <input type="text" class="form-control" id="exampleInputurl3" placeholder="School" th:field="*{school}"/>
     </div>
     <div action="/education">
-        <input type="submit" value = "Add More" />
+        <input type="submit" value = "Submit" />
     </div>
 
 </form>
