--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -12,7 +12,7 @@
             <input type="text" class="form-control" id="exampleInputname1" placeholder="Skill" th:field="*{skill}"/>
         </div>
         <div method="post" action="/skills">
-            <input type="submit" value = "Add More" />
+            <input type="submit" value = "Submit" />
         </div>
     </form>
     <form method="get" action="/">
