--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,10 +29,14 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                         <li><a href="/education" >Add Resume</a></li>
-                        <li><a href="/seekersearch">Search Users</a></li>
+                        <li><a href="/seekersearch">Search-Users</a></li>
                         <li><a href="/generateresume">Generate Resume</a></li>
-                        <li><a href="/recreuitUserSearch">Search for Users for Recruiters</a></li>
-                        <li><a href="/recruitSchoolSearch">Search for Users by schools for Recruiters</a></li>
+                <!--<div sec:authorize="isAuthenticated()" >-->
+                        <li><a href="/recreuitUserSearch">Search for Users-Recruiters</a></li>
+                        <li><a href="/recruitSchoolSearch">Search by schools-Recruiters</a></li>
+                        <li><a href="/recruitCompanySearch">Search by company-Recruiters</a></li>
+                        <li><a href="/recruitSkillSearch">Search by skill-Recruiters</a></li>
+                <!--</div>-->
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
