--- a/src/main/resources/templates/recreuitUserSearch.html
+++ b/src/main/resources/templates/recreuitUserSearch.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <nav th:replace="index::navseeker"></nav>
-
+<div class = "container">
 <form th:action = "@{/recreuitUserSearch}" th:object = "${user}" method = "post">
     <input type="text" class="form-control" id="exampleInputname1" placeholder="Enter username" th:field="*{username}"/>
     <input type="submit" value="Search" />
 </form>
-
+</div>
 </body>
 </html>
