--- a/src/main/resources/templates/work.html
+++ b/src/main/resources/templates/work.html
@@ -28,7 +28,7 @@
             <input type="text" class="form-control" id="exampleInputurl5" placeholder="Duties" th:field="*{duties}"/>
         </div>
         <div method="post" action="/work">
-            <input type="submit" value = "Add More" />
+            <input type="submit" value = "Submit" />
         </div>
         <!--<form method=""-->
     </form>
